--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,12 @@
  header{
    color: $main-color;
    font-family: $main-font;
+   display: flex;
+   background-color: $main-color;
+   color: rgb(255, 255, 255);
+   padding: 0px 50px;
+   align-items: center;
+    justify-content: space-between;
  }
 
 ul {
