--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <nav>
     <ul>
       <li><a [routerLink]="['/about']">About</a></li>
-      <li>Contact</li>
+      <li><a [routerLink]="['/contact']">Contact</a></li>
     </ul>
   </nav>
 </header>
