add banner info

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,9 @@
 <footer>
-   <div>There will be a footer)</div>
+  <div>
+    <p>Phone nunber: </p>
+    <p>Email: </p>
+  </div>
+  <div class="social">
+  
+  </div>
 </footer>
