--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,7 +2,7 @@
 
 
  header{
-   color: $main-color;
+   // height: 10vh;
    font-family: $main-font;
    display: flex;
    background-color: $main-color;
