--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,17 @@
 <section>
-   <div class="home-banner">
-      <div class="home-image"></div>
+  <div class="home-banner">
+   <div class="align-banner">
+    <div class="home-image"></div>
    </div>
+    <div class="banner-info">
+      <h2>Hello, I`m</h2>
+      <h1>Oleksandr Dolbnia</h1>
+      <p>I'm a front-end web developer who does a bit of web design.
+        My main areas of knowledge include Javascript, Typescript,
+        HTML, CSS, SCSS and Angular.
+      </p>
+      <span><a href="#"></a></span>
+
+    </div>
+  </div>
 </section>
