--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,22 +1,102 @@
 @import'../../shared/styles/variables';
 
-
 .home-banner {
   width: 100%;
-  height: 1000px;
+  // height: 80vh;
   background-color: $main-color;
   position: relative;
   padding: 20px 50px;
+  display: flex;
+}
+
+.align-banner {
+  width: 50%;
+  padding: 50px 50px;
+
 }
 
 .home-image {
-  width: 50%;
+  width: 100%;
   height: 100%;
   background-image: url('../../../assets/Images/10.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  clip-path: polygon(16% 0, 93% 6%, 75% 66%, 0 62%);
+  clip-path: polygon(19% 0, 93% 5%, 75% 100%, 0 97%);
   background-position: -45px -29px;
-  box-shadow: inset 0px 1px 1px black;
+  // box-shadow: inset 0px 0px 50px 10px black;
+  margin: auto;
 
+}
+
+.banner-info {
+  width: 50%;
+  padding: 100px 20px;
+}
+
+.banner-info {
+  color: rgb(255, 255, 255);
+  font-family: $main-font;
+}
+
+h1 {
+  font-size: 70px;
+  font-weight: bolder;
+  font-family: $main-fontBold;
+}
+
+.banner-info>h2 {
+  font-size: 50px;
+}
+
+.banner-info>p {
+  font-size: 20px;
+}
+
+.banner-info>span {
+  // width: 50%;
+  height: 40px;
+  color: $main-color;
+  font-family: $main-fontBold;
+  font-size: 20px;
+  font-weight: bolder;
+  margin: 50px 0px;
+  padding: 5px 10px;
+  position: relative;
+  display: inline-flex;
+}
+
+span a {
+  font-size: 20px;
+  font-weight: bolder;
+  transform-style: preserve-3d;
+  transform: translateZ(-25px);
+  transition: transform .25s;
+  font-family: $main-fontBold, sans-serif;
+}
+
+span a:before,
+span a:after {
+  position: absolute;
+  content: "See my work";
+  height: 55px;
+  width: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid rgb(255, 255, 255);
+}
+
+span a:before {
+  color: $main-color;
+  background: rgb(255, 255, 255);
+  transform: rotateY(0deg) translateZ(25px);
+}
+
+span a:after {
+  color: rgb(255, 255, 255);
+  transform: rotateX(90deg) translateZ(25px);
+}
+
+span a:hover {
+  transform: translateZ(-25px) rotateX(-90deg);
 }
