--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,37 @@
 <footer>
-  <div>
-    <p>Phone nunber: </p>
-    <p>Email: </p>
+  <div class="data">
+    <p>Phone nunber: +380 97 548 30 70 </p>
+    <p>Email: dolbnja9@gmail.com </p>
   </div>
   <div class="social">
-  
+    <ul>
+      <li>
+        <a class="facebook" href="https://www.facebook.com/oleksandr.dolbnja" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <div class="fb"></div>
+        </a>
+      </li>
+      <li>
+        <a class="linkedin" href="https://www.linkedin.com/in/oleksandr-dolbnia/" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <div class="in"></div>
+        </a>
+      </li>
+      <li>
+        <a class="github" href="https://github.com/Oleksandr-D" target="_blank">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <div class="git"></div>
+        </a>
+      </li>
+    </ul>
   </div>
 </footer>
