--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,8 +10,7 @@
         My main areas of knowledge include Javascript, Typescript,
         HTML, CSS, SCSS and Angular.
       </p>
-      <span><a href="#"></a></span>
-
+      <span><a [routerLink]="['/work']">Contact</a></span> 
     </div>
   </div>
 </section>
