--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,8 @@
    <h3><a [routerLink]="['/']">LOGO</a></h3>
   <nav>
     <ul>
+      <li><a [routerLink]="['/']">Home</a></li>
+      <li><a [routerLink]="['/work']">Work</a></li>
       <li><a [routerLink]="['/about']">About</a></li>
       <li><a [routerLink]="['/contact']">Contact</a></li>
     </ul>
