--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,7 +2,7 @@
 
 .home-banner {
   width: 100%;
-  // height: 80vh;
+  height: 80vh;
   background-color: $main-color;
   position: relative;
   padding: 20px 50px;
@@ -12,7 +12,6 @@
 .align-banner {
   width: 50%;
   padding: 50px 50px;
-
 }
 
 .home-image {
@@ -23,9 +22,7 @@
   background-repeat: no-repeat;
   clip-path: polygon(19% 0, 93% 5%, 75% 100%, 0 97%);
   background-position: -45px -29px;
-  // box-shadow: inset 0px 0px 50px 10px black;
   margin: auto;
-
 }
 
 .banner-info {
@@ -53,14 +50,9 @@ h1 {
 }
 
 .banner-info>span {
-  // width: 50%;
-  height: 40px;
   color: $main-color;
   font-family: $main-fontBold;
-  font-size: 20px;
-  font-weight: bolder;
   margin: 50px 0px;
-  padding: 5px 10px;
   position: relative;
   display: inline-flex;
 }
