--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer>
-  <div class="data">
-    <p>Phone nunber: +380 97 548 30 70 </p>
-    <p>Email: dolbnja9@gmail.com </p>
-  </div>
+  <address class="data">
+    <p type="phone">Phone nunber:<a href="tel:+380975483070"> +380 97 548 30 70</a></p>
+    <p>Email: <a href="mailto: dolbnja9@gmail.com">dolbnja9@gmail.com</a></p>
+  </address>
   <div class="social">
     <ul>
       <li>
