--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,5 @@
-<p>about works!</p>
+<div class="container">
+   <section>
+      <div>Page about empty. Content will be available soon.</div>
+   </section>
+</div>
