--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,5 @@
-<p>contact works!</p>
+<div class="container">
+   <section>
+      <div>Page contact empty. Content will be available soon.</div>
+   </section>
+</div>
