--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,10 +6,7 @@ footer {
   font-family: $main-fontBold;
   padding: 5px 50px;
   display: flex;
-
-  p {
-    color: #ffffff;
-  }
+  color:$main-text-color;
 }
 
 .data {
@@ -20,6 +17,12 @@ footer {
   justify-content: center;
 }
 
+.data p a{
+  transition-duration: 0.3s ;
+}
+.data p a:hover{
+  text-shadow: 0px 0px 5px  $main-text-color;
+}
 .social {
   width: 50%;
   position: relative;
@@ -43,7 +46,6 @@ ul li a {
   height: 40px;
   text-align: center;
   text-decoration: none;
-  color: #ffffff;
   margin: 0px 5px;
   transition: .5s;
 }
@@ -67,7 +69,7 @@ ul li a span:nth-child(1),
 ul li a span:nth-child(3) {
   width: 100%;
   height: 2%;
-  background: #ffffff;
+  background:$main-text-color;
 }
 
 ul li a span:nth-child(1) {
@@ -98,7 +100,7 @@ ul li a span:nth-child(2),
 ul li a span:nth-child(4) {
   width: 2%;
   height: 100%;
-  background: #ffffff;
+  background:$main-text-color;
 }
 
 ul li a span:nth-child(2) {
