--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@
    font-family: $main-font;
    display: flex;
    background-color: $main-color;
-   color: rgb(255, 255, 255);
+   color:$main-text-color;
    padding: 0px 50px;
    align-items: center;
     justify-content: space-between;
