--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -1,1 +1,5 @@
-<p>work works!</p>
+<div class="container">
+   <section>
+      <div>Page work empty. Content will be available soon.</div>
+   </section>
+</div>
