add about title

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,11 @@
 <footer>
   <address class="data">
-    <p type="phone">Phone nunber:<a href="tel:+380975483070"> +380 97 548 30 70</a></p>
-    <p>Email: <a href="mailto: dolbnja9@gmail.com">dolbnja9@gmail.com</a></p>
+    <a title="Dial the number!" href="tel:+380975483070">Phone nunber:
+      <span> +380 97 548 30 70</span>
+    </a>
+    <a title="Click to send me job offers!" href="mailto: dolbnja9@gmail.com">Email:
+      <span>dolbnja9@gmail.com</span>
+    </a>
   </address>
   <div class="social">
     <ul>
