--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,17 @@
 <div class="container">
    <section>
-      <div>Page about empty. Content will be available soon.</div>
+      <div class="photo">
+         <img src="../../../assets/Images/4а.jpg" alt="Dolbnia Alexander's Photo">
+      </div>
+      <div class="wraper-about">
+         <h1>ABOUT ME</h1>
+         <p>WHo AM i</p>
+         <div class="about-info">I'm a front-end web developer who does a 
+            bit of web design. My main areas of knowledge include Javascript, Typescript,
+            HTML, CSS, SCSS and Angular. I want to be part of a friendly and professional
+            team in which I could develop my development to achieve team results.
+         </div>
+         <button>Download Resume</button>
+      </div>
    </section>
 </div>
