--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,20 +1,29 @@
  @import'../../shared/styles/_variables.scss';
 
 
- header{
+ header {
    height: 10vh;
    font-family: $main-font;
    display: flex;
    background-color: $main-color;
-   color:$main-text-color;
+   color: $main-text-color;
    padding: 0px 50px;
    align-items: center;
-    justify-content: space-between;
+   justify-content: space-between;
  }
 
-ul {
+ ul {
    display: inline-flex;
-   li{
-      padding: 20px 25px;
+
+   li {
+     padding: 20px 25px;
+     transition-duration: 0.5s;
    }
-}
+
+   li:hover {
+     transition-duration: 0.3s;
+     color: rgb(228, 228, 228);
+     text-shadow: 0px 0px 10px $main-text-color;
+     transform: scale(1.2);
+   }
+ }
