--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,7 +11,7 @@
             HTML, CSS, SCSS and Angular. I want to be part of a friendly and professional
             team in which I could develop my development to achieve team results.
          </div>
-         <button>Download Resume</button>
+         <div class="btn from-right">Download resume</div>
       </div>
    </section>
 </div>
