--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,8 @@
         My main areas of knowledge include Javascript, Typescript,
         HTML, CSS, SCSS and Angular.
       </p>
-      <span><a [routerLink]="['/work']">Contact</a></span>
+      <!-- <span><a [routerLink]="['/work']">Contact</a></span> -->
+      <a [routerLink]="['/work']"><div class="btn from-right">See my works</div></a>
     </div>
   </div>
 </section>
