--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -18,11 +18,12 @@
    li {
      padding: 20px 25px;
      transition-duration: 0.5s;
+     color: rgb(194, 194, 194);
    }
 
    li:hover {
      transition-duration: 0.3s;
-     color: rgb(228, 228, 228);
+     color: $main-text-color;
      text-shadow: 0px 0px 10px $main-text-color;
      transform: scale(1.2);
    }
