--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -61,3 +61,67 @@
    width: 70%;
    margin: 50px 0px;
 }
+//Button
+.btn {		
+   width: 33%;
+   height: 50px;
+   line-height: 40px;
+   box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
+   text-align: center;
+	position: relative;	
+	padding: 5px;
+	font-size: 12px;
+	color: $main-text-color;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
+	cursor: pointer;
+	user-select: none;
+}
+
+.btn:before, .btn:after {
+	content: '';
+	position: absolute;	
+	transition: inherit;
+	z-index: -1;
+}
+
+.btn:hover {
+	color:black;
+	transition-delay: 0.5s;
+    z-index: 1;
+}
+
+.btn:hover:before {
+	transition-delay: 0s;
+}
+
+.btn:hover:after {
+	background: $main-text-color;
+	transition-delay: .35s;
+  
+}
+
+.from-right:before, 
+.from-right:after {
+	top: 0;
+	width: 0;
+	height: 100%;
+}
+
+.from-right:before {
+	left: 0;
+	border: 1px solid $main-text-color;
+	border-left: 0;
+	border-right: 0;	
+   z-index: 1;
+}
+
+.from-right:after {
+	right: 0;
+}
+
+.from-right:hover:before,
+.from-right:hover:after {
+	width: 100%;
+}
