--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,7 +7,7 @@
   position: relative;
   padding: 20px 50px;
   display: flex;
-  color:$main-text-color;
+  color: $main-text-color;
   font-family: $main-font;
 }
 
@@ -54,38 +54,71 @@ h1 {
   display: inline-flex;
 }
 
-span a {
-  font-size: 20px;
-  font-weight: bolder;
-  transform-style: preserve-3d;
-  transform: translateZ(-25px);
-  transition: transform .25s;
+//Button
+
+.btn {
+  width: 50%;
+  height: 55px;
   font-family: $main-fontBold;
+  text-align: center;
+  line-height: 45px;
+  margin-top: 50px;
+  position: relative;
+  padding: 5px 10px;
+  font-size: 1.4rem;
+  color: $main-text-color;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
+  cursor: pointer;
+  user-select: none;
+  box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
 }
 
-span a:before,
-span a:after {
+.btn:before,
+.btn:after {
+  content: '';
   position: absolute;
-  content: "See my work";
-  height: 60px;
-  width: 250px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 5px solid $main-text-color;
+  transition: inherit;
+  z-index: -1;
 }
 
-span a:before {
-  color: $main-color;
-  background:$main-text-color;
-  transform: rotateY(0deg) translateZ(25px);
+.btn:hover {
+  color: black;
+  transition-delay: 0.5s;
+  z-index: 1;
 }
 
-span a:after {
-  color:$main-text-color;
-  transform: rotateX(90deg) translateZ(25px);
+.btn:hover:before {
+  transition-delay: 0s;
 }
 
-span a:hover {
-  transform: translateZ(-25px) rotateX(-90deg);
+.btn:hover:after {
+  background: $main-text-color;
+  transition-delay: .35s;
+
+}
+
+.from-right:before,
+.from-right:after {
+  top: 0;
+  width: 0;
+  height: 100%;
+}
+
+.from-right:before {
+  left: 0;
+  border: 2px solid $main-text-color;
+  border-left: 0;
+  border-right: 0;
+  z-index: 1;
+}
+
+.from-right:after {
+  right: 0;
+}
+
+.from-right:hover:before,
+.from-right:hover:after {
+  width: 100%;
 }
