--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,9 +1,7 @@
 <div class="container">
   <section>
     <div class="photo">
-     
-        <p alt="Dolbnia Alexander's Photo">
-   
+      <p alt="Dolbnia Alexander's Photo">
     </div>
     <div class="wraper-about">
       <h1>ABOUT ME</h1>
@@ -16,4 +14,11 @@
       <div class="btn from-right">Download resume</div>
     </div>
   </section>
+</div>
+<div class="container">
+  <section class="education-section">
+    <h1>Education</h1>
+    <p>learning</p>
+  </section>
+
 </div>
