--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -2,7 +2,6 @@
 
 .container {
   width: 100%;
-  height: 600px;
   font-family: $main-font;
   background-color: $main-color;
   color: $main-text-color;
@@ -35,21 +34,24 @@ section {
   width: 35%;
   position: relative;
 
-  p {
-    width: 20%;
-    height: 10%;
-    position: absolute;
-    left: 118px;
-    top: 98px;
-    right: 0px;
-    bottom: 0px;
-    text-transform: uppercase;
-    padding-left: 10px;
-    color: #f6483b;
-  }
+
 }
 
-.wraper-about h1 {
+.wraper-about p,
+.education-section p {
+  width: 20%;
+  height: 10%;
+  position: absolute;
+  left: 118px;
+  top: 98px;
+  right: 0px;
+  bottom: 0px;
+  text-transform: uppercase;
+  padding-left: 10px;
+  color: #f6483b;
+}
+
+ h1 {
   font-size: 40px;
   text-transform: uppercase;
   position: relative;
@@ -57,7 +59,7 @@ section {
   margin-top: 50px;
 }
 
-.wraper-about h1:after {
+ h1:after {
   content: "";
   position: absolute;
   background-color: $main-text-color;
@@ -110,7 +112,6 @@ section {
 .btn:hover:after {
   background: $main-text-color;
   transition-delay: .35s;
-
 }
 
 .from-right:before,
@@ -135,4 +136,7 @@ section {
 .from-right:hover:before,
 .from-right:hover:after {
   width: 100%;
+}
+.education-section{
+  position: relative;
 }
