add education section

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <section>
+  <section class="aboutme-section">
     <div class="photo">
       <p alt="Dolbnia Alexander's Photo">
     </div>
@@ -17,8 +17,29 @@
 </div>
 <div class="container">
   <section class="education-section">
-    <h1>Education</h1>
-    <p>learning</p>
+    <div class="education-header">
+      <h1>Education</h1>
+      <p>learning</p>
+    </div>
+
+    <div class="education-data">
+      <div class="education-rows">
+        <div class="educationbox-right">
+          <div class="educationbox-year">
+            <h1>2004</h1>
+          </div>
+          <div class="educationbox-info">
+            <h3><b>Logos IT school</b></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sunt deserunt beatae quae nobis corporis eligendi expedita
+              dolorem laborum sequi voluptatum perferendis error aliquid,
+              odit consectetur asperiores inventore itaque libero pariatur
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+
 
 </div>
