--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -21,25 +21,50 @@
       <h1>Education</h1>
       <p>learning</p>
     </div>
-
     <div class="education-data">
-      <div class="education-rows">
-        <div class="educationbox-right">
+      <div class="education-rows-right">
+        <div class="educationbox">
           <div class="educationbox-year">
-            <h1>2004</h1>
+            <h1>2022</h1>
           </div>
           <div class="educationbox-info">
             <h3><b>Logos IT school</b></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Sunt deserunt beatae quae nobis corporis eligendi expedita
-              dolorem laborum sequi voluptatum perferendis error aliquid,
-              odit consectetur asperiores inventore itaque libero pariatur
+            <p> I was dealing with: HTML, CSS, SASS/SCSS, JavaScript, Typescript, MySQL. In my works I
+              have experience of using: Pixel perfect, Figma,
+              Adaptive and responsive web design, Gulp, OOP, JSON,
+              jQuery UI, Bootstrap, Angular.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="education-rows-left">
+        <div class="educationbox-left">
+          <div class="educationbox-info">
+            <h3><b>Self-education</b></h3>
+            <p>I'm actively involved in self-education in W3schools,
+              Codecademy, Udemy etc. I'm familiar with: GitHub, Agile, Scrum,
+              JavaScript ES6, Regular expressions, xmlHTTPRequest,
+              async await, fetch, Document Object Model (DOM),
+            </p>
+          </div>
+          <div class="educationbox-year">
+            <h1>2021</h1>
+          </div>
+        </div>
+      </div>
+      <div class="education-rows-right">
+        <div class="educationbox">
+          <div class="educationbox-year">
+            <h1>2001</h1>
+          </div>
+          <div class="educationbox-info">
+            <h3><b>National Forestry University of Ukraine.</b></h3>
+            <p>Specialty engineering mechanics, fulltime
+              education, incomplete higher. 2001.
             </p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
 </div>
