--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -67,4 +67,34 @@
       </div>
     </div>
   </section>
+  <div class="container">
+    <section class="experiance-section">
+      <div class="education-header">
+        <h1>Experiance</h1>
+        <p>Involvement</p>
+      </div>
+      <div class="wraper-experiancebox">
+        <div class="experiancebox">
+          <h3>My every day work</h3>
+          <p>Front-end developer.</p>
+          <p>I'm looking for my first job as a front end developer.
+            I have no commercial experience in web development but
+            I improve my programming skills on a daily basis by
+            creating web pages and solving problems using java script.
+          </p>
+          <div class="experiancebox-year">2022</div>
+        </div>
+
+        <div class="experiancebox">
+          <h3>LLC "HAVAS INGAGE UKRAINE"</h3>
+          <p>Brand ambassador. 2014 – present.</p>
+          <p>Conducted trainings, presented brand products, engaged in merchandising,
+            customer consulting and product sales.
+          </p>
+          <div class="experiancebox-year">2014 – 2022</div>
+        </div>
+       
+      </div>
+    </section>
+  </div>
 </div>
