--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('../src/app/shared/styles/_base.scss');
-@import url('../src/app/shared/styles/_variables.scss');
+@import '../src/app/shared/styles/_base.scss';
+@import '../src/app/shared/styles/variables';
 
+body {
+   background-color:$main-color;
+   font-family: $main-font;
+   color: $main-text-color;
+}
