--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -25,9 +25,14 @@
     width: 100%;
     height: 600px;
     background-size: cover;
-    box-shadow: inset 0vw 0vw 2vw 2vw $main-color;
-    clip-path: polygon(-12% 12%, 87% 6%, 69% 89%, 18% 76%);
-    background-position: -24px 4px;
+    clip-path: polygon(0% 9%, 95% 6%, 69% 100%, 18% 80%);
+    transition-duration: 0.9s;
+  }
+
+  p:hover {
+    transition-duration: 0.9s;
+    clip-path: polygon(0% 0, 100% 0%, 100% 100%, 0 100%);
+    border: 2px solid $main-text-color;
   }
 }
 
@@ -136,7 +141,8 @@
   width: 100%;
 }
 
-.education-section {
+.education-section,
+.experiance-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -220,7 +226,8 @@
   left: -22.5px;
   transition: 0.3s;
 }
-.educationbox:hover::after{
+
+.educationbox:hover::after {
   border: 3px solid #f6483b;
   background-color: $main-color;
   z-index: 1;
@@ -250,11 +257,12 @@
     margin-bottom: 20px;
   }
 }
-.education-rows-left{
+
+.education-rows-left {
   margin-left: 0%;
 }
 
-.educationbox-left{
+.educationbox-left {
   display: flex;
   margin-right: 15px;
   position: relative;
@@ -272,8 +280,63 @@
   right: -22.5px;
   transition: 0.3s;
 }
-.educationbox-left:hover::after{
+
+.educationbox-left:hover::after {
   border: 3px solid #f6483b;
   background-color: $main-color;
   z-index: 1;
+}
+
+.experiance-section {
+  margin: 100px 0px 300px;
+}
+
+.wraper-experiancebox {
+  width: 80%;
+  display: flex;
+  margin-top: 100px;
+  justify-content: space-between;
+}
+
+.experiancebox {
+  width: 45%;
+  padding: 10px 50px;
+  position: relative;
+  box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
+
+  h3 {
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+}
+
+.experiancebox-year {
+
+  width: 100%;
+  justify-content: center;
+    align-items: center;
+  // height: 0px;
+  // font-size: 100px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  height: 0px;
+  font-size: 70px;
+  transition-duration: 0.9s;
+  overflow: hidden;
+  z-index: -1;
+  box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
+  // display: none;
+}
+
+.experiancebox:hover .experiancebox-year{
+// display: block;
+transition-duration: 0.9s;
+height: 100%;
+z-index: 10;
+transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+
+    
 }
