--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,10 +2,10 @@
 
 .home-banner {
   width: 100%;
-  height: 80vh;
+  // height: 80vh;
   background-color: $main-color;
   position: relative;
-  padding: 20px 50px;
+  padding: 0px 50px;
   display: flex;
   color: $main-text-color;
   font-family: $main-font;
@@ -13,7 +13,7 @@
 
 .align-banner {
   width: 50%;
-  padding: 50px 50px;
+  padding: 10px 50px;
 }
 
 .home-image {
@@ -22,27 +22,40 @@
   background-image: url('../../../assets/Images/10.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  clip-path: polygon(19% 0, 93% 5%, 75% 100%, 0 97%);
-  background-position: -45px -29px;
-  margin: auto;
+  clip-path: polygon(32% 0, 86% 19%, 80% 100%, 0 85%);
+  transition-duration: 0.9s;
+}
+
+.home-image:hover{
+  transition-duration: 0.9s;
+  clip-path: polygon(0% 0, 100% 0%, 100% 100%, 0 100%);
+  border: 2px solid $main-text-color;
 }
 
 .banner-info {
   width: 50%;
   padding: 100px 20px;
-}
-
-h1 {
-  font-size: 70px;
-  font-weight: bolder;
-  font-family: $main-fontBold;
+  h1 {
+    font-size: 70px;
+    font-weight: bolder;
+    font-family: $main-fontBold;
+    transition-duration: 0.5s;
+  }
+  h1:hover,
+  h2:hover,
+  p:hover{
+    transition-duration: 0.5s;
+    text-shadow: 0px 0px 10px  $main-text-color;
+  }
 }
 
 .banner-info>h2 {
+  transition-duration: 0.5s;
   font-size: 50px;
 }
 
 .banner-info>p {
+  transition-duration: 0.5s;
   font-size: 20px;
 }
 
