--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,15 +3,19 @@
     <div class="photo">
       <p alt="Dolbnia Alexander's Photo">
     </div>
-    <div class="wraper-about">
-      <h1>ABOUT ME</h1>
-      <p>WHo AM i</p>
-      <div class="about-info">I'm a front-end web developer who does a
-        bit of web design. My main areas of knowledge include Javascript, Typescript,
-        HTML, CSS, SCSS and Angular. I want to be part of a friendly and professional
-        team in which I could develop my development to achieve team results.
+    <div class="mobil-about">
+      <div class="wraper-about">
+        <h1>ABOUT ME</h1>
+        <p>WHo AM i</p>
+        <div class="about-info">I'm a front-end web developer who does a
+          bit of web design. My main areas of knowledge include Javascript, Typescript,
+          HTML, CSS, SCSS and Angular. I want to be part of a friendly and professional
+          team in which I could develop my skills to achieve team results.
+          Work will take up a lot of space in my life, so the only way to be truly
+          satisfied with life is to do what i love.
+        </div>
+        <div class="btn from-right">Download resume</div>
       </div>
-      <div class="btn from-right">Download resume</div>
     </div>
   </section>
 </div>
@@ -75,7 +79,7 @@
       </div>
       <div class="wraper-experiancebox">
         <div class="experiancebox">
-          <h3>My every day work</h3>
+          <h3>Hired by the dream to create.</h3>
           <p>Front-end developer.</p>
           <p>I'm looking for my first job as a front end developer.
             I have no commercial experience in web development but
@@ -93,7 +97,7 @@
           </p>
           <div class="experiancebox-year">2014 – 2022</div>
         </div>
-       
+
       </div>
     </section>
   </div>
