--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -5,9 +5,6 @@
   font-family: $main-font;
   background-color: $main-color;
   color: $main-text-color;
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
 }
 
 .aboutme-section {
@@ -36,16 +33,21 @@
   }
 }
 
-.wraper-about {
+.mobil-about {
   width: 35%;
+}
+
+.wraper-about {
+  width: 100%;
   position: relative;
+  margin: auto;
 
   p {
     width: 20%;
     height: 10%;
     position: absolute;
     left: 118px;
-    top: 98px;
+    top: 45px;
     right: 0px;
     bottom: 0px;
     text-transform: uppercase;
@@ -78,14 +80,14 @@
 
 //Button
 .btn {
-  width: 33%;
+  width: 41%;
   height: 50px;
-  line-height: 40px;
+  line-height: 50px;
   box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
   text-align: center;
   position: relative;
-  padding: 5px;
-  font-size: 12px;
+
+  font-size: 70%;
   color: $main-text-color;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -148,6 +150,7 @@
   align-items: center;
 }
 
+// education section
 .education-header {
   position: relative;
   margin: auto;
@@ -311,32 +314,166 @@
 }
 
 .experiancebox-year {
-
   width: 100%;
   justify-content: center;
-    align-items: center;
-  // height: 0px;
-  // font-size: 100px;
+  align-items: center;
   display: flex;
   align-items: center;
   position: absolute;
   top: 100%;
   left: 0%;
   height: 0px;
-  font-size: 70px;
+  font-size: 30px;
   transition-duration: 0.9s;
   overflow: hidden;
   z-index: -1;
   box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
-  // display: none;
 }
 
-.experiancebox:hover .experiancebox-year{
-// display: block;
-transition-duration: 0.9s;
-height: 100%;
-z-index: 10;
-transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+.experiancebox:hover .experiancebox-year {
+  transition-duration: 0.9s;
+  height: 100%;
+  z-index: 10;
+  transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+  font-size: 70px;
+}
 
-    
+@media screen and (max-width:1025px) {
+  .photo p {
+    background-position: -40px 0px;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  .education-data {
+    width: 100%;
+  }
+
+  .wraper-experiancebox {
+    width: 100%;
+    justify-content: space-evenly;
+    margin-top: 10%;
+  }
+}
+
+@media screen and (max-width: 770px) {
+
+  .aboutme-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .photo {
+    width: 80%;
+
+    p {
+      background-position: 0px 0px;
+    }
+  }
+
+  .wraper-about {
+    width: 80%;
+
+    h1 {
+      margin-top: 10px;
+      padding-bottom: 5px;
+    }
+
+    p {
+      top: 47px;
+    }
+  }
+
+  .mobil-about {
+    width: 80%;
+  }
+
+  .education-section {
+    margin-top: 100px;
+  }
+
+  .educationbox-info {
+    padding: 0px 20px;
+  }
+
+  .wraper-experiancebox {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 400px;
+
+  }
+
+  .experiancebox {
+    width: 80%;
+    padding: 10px 20px;
+  }
+
+  .experiancebox:hover .experiancebox-year {
+    transition-duration: 0.9s;
+    height: 50%;
+    z-index: 10;
+    font-size: 50px;
+    transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+  }
+
+  .experiance-section {
+    margin: 100px 0px 200px;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+
+  .photo {
+    width: 100%;
+    position: relative;
+
+    p {
+      background-position: center;
+      clip-path: none;
+    }
+
+    p:hover {
+      border: none;
+    }
+  }
+
+  .mobil-about {
+    width: 100%;
+    position: absolute;
+    bottom: -200px;
+  }
+
+  .education-section {
+    width: 100%;
+    margin-top: 200px;
+  }
+
+  .education-data {
+    width: 80%;
+  }
+
+  .education-rows-right::after {
+    display: none;
+  }
+
+  .education-rows-right,
+  .education-rows-left {
+    margin-left: 0px;
+    width: 100%;
+    padding: 20px 0px;
+    border: 2px solid $main-text-color;
+  }
+
+  .education-rows-left {
+    margin: 40px 0px;
+  }
+
+  .experiancebox-year {
+    display: none;
+  }
+
 }
