--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,7 +7,7 @@ footer {
   padding: 0px 50px;
   margin-bottom: 40px;
   display: flex;
-  color:$main-text-color;
+  color: $main-text-color;
 }
 
 .data {
@@ -18,16 +18,18 @@ footer {
   justify-content: center;
 }
 
-.data a{
-  transition-duration: 0.5s ;
+.data a {
+  transition-duration: 0.5s;
 }
-.data a:hover{
-  transition-duration: 0.5s ;
-  text-shadow: 0px 0px 10px  $main-text-color;
+
+.data a:hover {
+  transition-duration: 0.5s;
+  text-shadow: 0px 0px 10px $main-text-color;
   transform: scaleX(1.1);
 }
+
 .social {
-  width: 50%;
+  width: 30%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -72,7 +74,7 @@ ul li a span:nth-child(1),
 ul li a span:nth-child(3) {
   width: 100%;
   height: 2%;
-  background:$main-text-color;
+  background: $main-text-color;
 }
 
 ul li a span:nth-child(1) {
@@ -103,7 +105,7 @@ ul li a span:nth-child(2),
 ul li a span:nth-child(4) {
   width: 2%;
   height: 100%;
-  background:$main-text-color;
+  background: $main-text-color;
 }
 
 ul li a span:nth-child(2) {
@@ -155,6 +157,40 @@ ul li a:hover span:nth-child(4) {
 .github:hover {
   background: #4f4f4f
 }
-.spacer-30{
+
+.spacer-30 {
   height: 50px;
+}
+
+@media screen and (max-width: 1025px) {
+
+  footer {
+    justify-content: space-evenly;
+    padding: 0px 10px;
+  }
+
+  .data {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+    height: 150px;
+    font-size: 14px;
+  }
+
+  .data {
+    width: 90%;
+    margin-right: 0px;
+    text-align: center;
+  }
+
+  .social {
+    width: inherit;
+  }
+
 }
