--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
  @import'../../shared/styles/_variables.scss';
 
 
- header {
+ .desktop-header {
    height: 10vh;
    font-family: $main-font;
    display: flex;
@@ -12,26 +12,86 @@
    justify-content: space-between;
  }
 
- ul {
-   display: inline-flex;
+ .mobile-header {
+   display: none;
+ }
 
-   li {
-     padding: 20px 25px;
-     transition-duration: 0.5s;
-     color: rgb(194, 194, 194);
-   }
+ .desktop-nav {
+   ul {
+     display: inline-flex;
 
-   li:hover {
-     transition-duration: 0.3s;
-     color: $main-text-color;
-     text-shadow: 0px 0px 10px $main-text-color;
-     transform: scale(1.2);
+     li {
+       padding: 20px 25px;
+       transition-duration: 0.5s;
+       color: rgb(194, 194, 194);
+     }
+
+     li:hover {
+       transition-duration: 0.3s;
+       color: $main-text-color;
+       text-shadow: 0px 0px 10px $main-text-color;
+       transform: scale(1.2);
+     }
    }
  }
 
+
  @media screen and (max-width: 600px) {
 
-//create header mobile
+   .desktop-header {
+     display: none;
+   }
 
+   .mobile-header {
+     display: block;
+     width: 70px;
+     height: 70px;
+     position: fixed;
+     top: 30px;
+     right: 30px;
+     z-index: 20;
+   }
 
+   .mobile-nav {
+     background-image: url('../../../assets/Images/free-icon-men.png');
+     background-repeat: no-repeat;
+     background-size: cover;
+     width: 100%;
+     height: 100%;
+     box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
+   }
+
+   ul {
+     width: 100vw;
+     height: 0px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     position: absolute;
+     top: -28px;
+     right: -41px;
+     transition-duration: 0.9s;
+     overflow: hidden;
+     z-index: -1;
+     background-color: rgba(255, 255, 255, 0.591);
+     box-shadow: inset 0px 0px 10px 0px rgb(0, 0, 0);
+   }
+
+   .mobile-nav:hover ul {
+     transition-duration: 0.9s;
+     width: 100vw;
+     height: 50vh;
+     z-index: 10;
+     transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+   }
+
+   li {
+     padding: 20px 0px;
+     transition-duration: 0.5s;
+     color: $main-color;
+     text-shadow: 0px 0px 100px $main-color;
+     font-family: $main-fontBold;
+     font-size: 70%;
+   }
  }
