--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -43,7 +43,7 @@
   margin: auto;
 
   p {
-    width: 20%;
+    width: 40%;
     height: 10%;
     position: absolute;
     left: 118px;
@@ -86,7 +86,6 @@
   box-shadow: 0px 0px 20px 0px rgb(100, 100, 100);
   text-align: center;
   position: relative;
-
   font-size: 70%;
   color: $main-text-color;
   letter-spacing: 2px;
@@ -356,6 +355,8 @@
     justify-content: space-evenly;
     margin-top: 10%;
   }
+
+
 }
 
 @media screen and (max-width: 770px) {
@@ -488,6 +489,10 @@
   }
 
   .education-data {
+    width: 90%;
+  }
+
+  .experiancebox {
     width: 90%;
   }
 
