--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,10 @@
         My main areas of knowledge include Javascript, Typescript,
         HTML, CSS, SCSS and Angular.
       </p>
-      <a [routerLink]="['/work']"><div class="btn from-right">See my works</div></a>
+      <a [routerLink]="['/work']">
+        <div class="btn from-right">See my works</div>
+      </a>
     </div>
   </div>
 </section>
+<div class="spacer"></div>
