--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -26,7 +26,7 @@
   transition-duration: 0.9s;
 }
 
-.home-image:hover{
+.home-image:hover {
   transition-duration: 0.9s;
   clip-path: polygon(0% 0, 100% 0%, 100% 100%, 0 100%);
   border: 2px solid $main-text-color;
@@ -35,17 +35,19 @@
 .banner-info {
   width: 50%;
   padding: 100px 20px;
+
   h1 {
     font-size: 70px;
     font-weight: bolder;
     font-family: $main-fontBold;
     transition-duration: 0.5s;
   }
+
   h1:hover,
   h2:hover,
-  p:hover{
+  p:hover {
     transition-duration: 0.5s;
-    text-shadow: 0px 0px 10px  $main-text-color;
+    text-shadow: 0px 0px 10px $main-text-color;
   }
 }
 
@@ -77,7 +79,7 @@
   line-height: 45px;
   margin-top: 50px;
   position: relative;
-  padding: 5px 10px;
+  padding: 5px 5px;
   font-size: 1.4rem;
   color: $main-text-color;
   letter-spacing: 2px;
@@ -109,7 +111,6 @@
 .btn:hover:after {
   background: $main-text-color;
   transition-delay: .35s;
-
 }
 
 .from-right:before,
@@ -134,4 +135,119 @@
 .from-right:hover:before,
 .from-right:hover:after {
   width: 100%;
+}
+
+.spacer {
+  display: none;
+}
+
+@media screen and (max-width:1025px) {
+
+  .home-banner{
+    padding: 0px 20px;
+  }
+  .btn {
+    width: 100%;
+  }
+
+  .align-banner {
+    width: 100%;
+    height: 600px;
+    padding: 10px 10px;
+  }
+
+  .home-image {
+    width: 100%;
+    clip-path: polygon(32% 0, 86% 11%, 83% 100%, 0 85%);
+    background-size: cover;
+  }
+
+  .banner-info{
+    padding: 100px 0px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+
+  .home-banner {
+    flex-direction: column;
+  }
+
+  .home-image {
+    background-position: 0px -40px;
+    clip-path: polygon(33% 0, 92% 7%, 85% 100%, 0 78%);
+  }
+
+  .banner-info {
+    width: 100%;
+    padding: 0px 20px;
+
+    p {
+      margin-top: 50px;
+    }
+  }
+
+  .btn {
+    margin: 100px 0px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+
+  .home-image {
+    background-position: 0px -40px;
+    clip-path: none;
+    position: relative;
+  }
+
+  .align-banner {
+    height: 550px;
+    padding: 0px 0px;
+  }
+
+  .home-banner {
+    padding: 0px;
+  }
+
+  .home-image:hover {
+    transition-duration: none;
+    clip-path: none;
+    border: none;
+  }
+
+  .banner-info {
+    position: absolute;
+    top: 370px;
+  }
+
+  .spacer {
+    display: block;
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 427px) {
+
+  .banner-info {
+    h2 {
+      font-size: 40px;
+    }
+
+    h1 {
+      font-size: 60px;
+    }
+  }
+}
+
+@media screen and (max-width: 370px) {
+
+  .banner-info {
+    h2 {
+      font-size: 30px;
+    }
+
+    h1 {
+      font-size: 50px;
+    }
+  }
 }
