add about service

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -23,7 +23,7 @@
   <section class="education-section">
     <div class="education-header">
       <h1>Education</h1>
-      <p>learning</p>
+      <p id="lerning-scroll" onscroll="scrollEfect()" >learning</p>
     </div>
     <div class="education-data">
       <div class="education-rows-right">
