--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -209,6 +209,11 @@
   margin: 0px auto;
 }
 
+#lerning-scroll{
+  position: absolute;
+  right: 1px;
+  left: 131px;
+}
 
 .educationbox {
   display: flex;
